--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
