--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "bull": "^4.12.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-rate-limit": "^7.2.0",
+    "memory-cache": "^0.2.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
   },
