--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "author": "Guilherme Lyare",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.18.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sequelize-cli": "^6.6.2"
   }
 }
